{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 179,
  "lineage": "65254784-edf9-1dae-22d1-bd8348b01502",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:619801971185:loadbalancer/app/ecs-flask-alb/c555fd0791bf0186",
            "arn_suffix": "app/ecs-flask-alb/c555fd0791bf0186",
            "dns_name": "ecs-flask-alb-2114929592.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:619801971185:loadbalancer/app/ecs-flask-alb/c555fd0791bf0186",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-flask-alb",
            "security_groups": [
              "sg-092a9a52de2954ac2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02103a60e6c81ef7b"
              },
              {
                "subnet_id": "subnet-05a8c2b3639d51e30"
              }
            ],
            "subnets": [
              "subnet-02103a60e6c81ef7b",
              "subnet-05a8c2b3639d51e30"
            ],
            "vpc_id": "vpc-04ce9151b8962ea6a",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1a",
            "aws_subnet.public_1b",
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:619801971185:targetgroup/ecs-flask-tg/3441c8defc27c537",
            "arn_suffix": "targetgroup/ecs-flask-tg/3441c8defc27c537",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/ping/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:619801971185:targetgroup/ecs-flask-tg/3441c8defc27c537",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-flask-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:internet-gateway/igw-04931b28ec0a6bf48",
            "id": "igw-04931b28ec0a6bf48",
            "owner_id": "619801971185",
            "tags": {
              "Name": "Flask-App-nternetGateway"
            },
            "tags_all": {
              "Name": "Flask-App-nternetGateway"
            },
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:route-table/rtb-0e0fd6ce2f1aa8b8e",
            "id": "rtb-0e0fd6ce2f1aa8b8e",
            "owner_id": "619801971185",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04931b28ec0a6bf48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-flask_app",
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c73d7e29cc0e85c",
            "route_table_id": "rtb-0e0fd6ce2f1aa8b8e",
            "subnet_id": "subnet-02103a60e6c81ef7b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-flask_app",
            "aws_route_table.public",
            "aws_subnet.public_1a",
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c7293ff3a5816c",
            "route_table_id": "rtb-0e0fd6ce2f1aa8b8e",
            "subnet_id": "subnet-05a8c2b3639d51e30"
          },
          "dependencies": [
            "aws_internet_gateway.igw-flask_app",
            "aws_route_table.public",
            "aws_subnet.public_1b",
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:security-group/sg-092a9a52de2954ac2",
            "description": "control access to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092a9a52de2954ac2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-group",
            "name_prefix": "",
            "owner_id": "619801971185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:security-group/sg-083e7ed62ab2e61ab",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083e7ed62ab2e61ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-092a9a52de2954ac2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "619801971185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:subnet/subnet-02103a60e6c81ef7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-02103a60e6c81ef7b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619801971185",
            "tags": {
              "Name": "PUB_SUBNET_1"
            },
            "tags_all": {
              "Name": "PUB_SUBNET_1"
            },
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:subnet/subnet-05a8c2b3639d51e30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-05a8c2b3639d51e30",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619801971185",
            "tags": {
              "Name": "PUB_SUBNET_2"
            },
            "tags_all": {
              "Name": "PUB_SUBNET_2"
            },
            "vpc_id": "vpc-04ce9151b8962ea6a"
          },
          "dependencies": [
            "aws_vpc.vpc-flask_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:619801971185:vpc/vpc-04ce9151b8962ea6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-080b21d3f190389d8",
            "default_route_table_id": "rtb-04dbbaf76231e6935",
            "default_security_group_id": "sg-07ede2379a0879690",
            "dhcp_options_id": "dopt-832d23e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ce9151b8962ea6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04dbbaf76231e6935",
            "owner_id": "619801971185",
            "tags": {
              "Name": "VPC-Flask_App"
            },
            "tags_all": {
              "Name": "VPC-Flask_App"
            }
          }
        }
      ]
    }
  ]
}